--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -1,1 +1,28 @@
-name:
+name: Android Build
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4.0.1
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v3.13.0
+        with:
+          java-version: '1.8'
+
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          name: CalculatorOP Apk
+          path: app/build/outputs/apk/debug/app-debug.apk
