--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -14,15 +14,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up JDK 1.8
-        uses: actions/setup-java@v3.13.0
+        uses: actions/setup-java@v3
         with:
           java-version: '1.8'
+          distribution: 'adopt'
 
       - name: Build with Gradle
         run: ./gradlew build
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@v3
         with:
           name: CalculatorOP Apk
           path: app/build/outputs/apk/debug/app-debug.apk
