--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -1,29 +1,37 @@
 name: Android Build
 
 on:
+
   push:
     branches:
       - master
+      - develop
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout the code
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '1.8'
-          distribution: 'adopt'
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.3
         with:
-          name: CalculatorOP Apk
+          # Artifact name
+          name: CalculatorOP.apk
+          # A file, directory or wildcard pattern that describes what to upload
           path: app/build/outputs/apk/debug/app-debug.apk
