--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -1,7 +1,6 @@
 name: Android Build
 
 on:
-
   push:
     branches:
       - master
@@ -25,13 +24,14 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Check code style
+        run: ./gradlew ktlintCheck --continue
+
       - name: Build with Gradle
         run: ./gradlew build
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.3
         with:
-          # Artifact name
           name: CalculatorOP.apk
-          # A file, directory or wildcard pattern that describes what to upload
           path: app/build/outputs/apk/debug/app-debug.apk
