--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -28,7 +28,8 @@ jobs:
         run: ./gradlew ktlintCheck --continue
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build --warning-mode all
+
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.3
