--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Check code style
-        run: ./gradlew ktlintCheck --continue
+#      - name: Check code style
+#        run: ./gradlew ktlintCheck --continue
 
       - name: Build with Gradle
         run: ./gradlew build --warning-mode all
