--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -30,9 +30,29 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build --warning-mode all
 
-
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.3
         with:
           name: CalculatorOP.apk
           path: app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: "v${{ github.run_number }}"
+          release_name: "Release ${{ github.run_number }}"
+          draft: false
+          prerelease: false
+
+      - name: Upload APK to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: app/build/outputs/apk/release/app-release.apk
+          asset_name: CalculatorOP-v${{ github.run_number }}.apk
+          asset_content_type: application/vnd.android.package-archive
