--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -1,18 +1,20 @@
-name: Android Build
+name: Build and Release APK
 
 on:
   push:
     branches:
-      - master
-      - develop
+      - main
+
+permissions:
+  contents: write
 
 jobs:
   build:
-    name: Build
+    name: Build APK
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout the code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up JDK 17
@@ -24,17 +26,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-#      - name: Check code style
-#        run: ./gradlew ktlintCheck --continue
-
-      - name: Build with Gradle
-        run: ./gradlew build --warning-mode all
-
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.3
-        with:
-          name: CalculatorOP.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+      - name: Build Release APK
+        run: ./gradlew assembleRelease
 
       - name: Create Release
         id: create_release
