--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -1,51 +1,10 @@
-name: Build and Release APK
+- name: Decode and save keystore file
+  run: echo "${{ secrets.KEYSTORE_FILE }}" | base64 --decode > my-release-key.keystore
 
-on:
-  push:
-    branches:
-      - main
-
-permissions:
-  contents: write
-
-jobs:
-  build:
-    name: Build APK
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Build Release APK
-        run: ./gradlew assembleRelease
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: "v${{ github.run_number }}"
-          release_name: "Release ${{ github.run_number }}"
-          draft: false
-          prerelease: false
-
-      - name: Upload APK to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: app/build/outputs/apk/release/app-release.apk
-          asset_name: CalculatorOP-v${{ github.run_number }}.apk
-          asset_content_type: application/vnd.android.package-archive
+- name: Build Signed Release APK
+  run: |
+    ./gradlew assembleRelease \
+      -Pandroid.injected.signing.store.file=my-release-key.keystore \
+      -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_PASSWORD }} \
+      -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} \
+      -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }}
