--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -47,7 +47,7 @@ jobs:
           tag_name: "v${{ github.run_number }}"
           release_name: "Release ${{ github.run_number }}"
           draft: false
-          prerelease: false
+          release: false
 
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
