--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -15,9 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Step 2: Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -25,21 +27,23 @@ jobs:
           java-version: '17'
           cache: 'gradle'
 
+      # Step 3: Ensure Gradlew is executable
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      # Step 4: Run unit tests
       - name: Run unit test
         run: ./gradlew clean testDebug
 
-      # Decrypt the keystore file and save it locally
+      # Step 5: Decrypt the keystore file and save it locally
       - name: Decrypt and Setup Keystore
         run: echo "${{ secrets.KEYSTORE }}" | base64 --decode > release.keystore
 
-      # Build the unsigned APK
+      # Step 6: Build the unsigned APK
       - name: Build Unsigned APK
         run: ./gradlew assembleRelease
 
-      # Sign the APK with the keystore
+      # Step 7: Sign the APK with the keystore
       - name: Sign the APK
         run: |
           jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 \
@@ -49,14 +53,16 @@ jobs:
           app/build/outputs/apk/release/app-release-unsigned.apk \
           ${{ secrets.KEY_ALIAS }}
 
-      # Align the APK
+      # Step 8: Align the APK
       - name: Zipalign the APK
         run: |
-          $ANDROID_HOME/build-tools/30.0.3/zipalign -v 4 \
+          # Dynamically find the latest build-tools version
+          ZIPALIGN=$($ANDROID_HOME/build-tools/$(ls $ANDROID_HOME/build-tools | sort -V | tail -n 1)/zipalign)
+          $ZIPALIGN -v 4 \
           app/build/outputs/apk/release/app-release-unsigned.apk \
           app/build/outputs/apk/release/app-release.apk
 
-      # Create a new release on GitHub
+      # Step 9: Create a new release on GitHub
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -68,7 +74,7 @@ jobs:
           draft: false
           prerelease: false
 
-      # Upload the signed and aligned APK to the release
+      # Step 10: Upload the signed and aligned APK to the release
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
         env:
