--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -57,12 +57,17 @@ jobs:
       - name: Zipalign the APK
         run: |
           # Dynamically find the latest build-tools version
-          ZIPALIGN=$($ANDROID_HOME/build-tools/$(ls $ANDROID_HOME/build-tools | sort -V | tail -n 1)/zipalign)
+          ZIPALIGN=$ANDROID_HOME/build-tools/$(ls $ANDROID_HOME/build-tools | sort -V | tail -n 1)/zipalign
           $ZIPALIGN -v 4 \
           app/build/outputs/apk/release/app-release-unsigned.apk \
           app/build/outputs/apk/release/app-release.apk
 
-      # Step 9: Create a new release on GitHub
+      # Step 9: Verify APK signature
+      - name: Verify APK Signature
+        run: |
+          apksigner verify app/build/outputs/apk/release/app-release.apk
+
+      # Step 10: Create a new release on GitHub
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -74,7 +79,7 @@ jobs:
           draft: false
           prerelease: false
 
-      # Step 10: Upload the signed and aligned APK to the release
+      # Step 11: Upload the signed and aligned APK to the release
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
         env:
