--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -100,3 +100,4 @@ jobs:
           asset_path: app/build/outputs/apk/release/app-release.apk
           asset_name: CalculatorOP-v${{ github.run_number }}.apk
           asset_content_type: application/vnd.android.package-archive
+ # End of file
