--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -38,6 +38,8 @@ jobs:
           sudo apt-get install -y wget
           wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
           unzip commandlinetools-linux-8512546_latest.zip -d cmdline-tools
+          # Delete the existing latest directory if it exists
+          rm -rf $ANDROID_HOME/cmdline-tools/latest
           mkdir -p $ANDROID_HOME/cmdline-tools/latest
           mv cmdline-tools/cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest/
           yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
@@ -100,4 +102,3 @@ jobs:
           asset_path: app/build/outputs/apk/release/app-release.apk
           asset_name: CalculatorOP-v${{ github.run_number }}.apk
           asset_content_type: application/vnd.android.package-archive
- # End of file
